welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: not found: value length
  val n :Int = length
               ^